# CS2341FinalProject

./: AVLtree.h  CMakeLists.txt  README.md  document.h  indexHandler.cpp  main.cpp  queryProcessor.h  rapidJSONExample.cpp  stopFunction.h  test.cpp  word.h
